题1：分析gc log